--- a/page18.html
+++ b/page18.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-21">
+<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-21">
 
     
 
@@ -84,12 +84,10 @@
         <div class="row justify-content-center content-row">
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
                 <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5"></h3>
-                <h2 class="align-left mbr-bold mbr-fonts-style display-2"></h2>
+                <h2 class="align-left mbr-bold mbr-fonts-style display-2">Оберіть категорію, яка Вас цікавить</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4">
-                    <a class="btn btn-primary display-4" href="https://mobirise.co">СМОТРЕТЬ ПОДРОБНЕЕ</a>
-                </div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="page17.html#table1-1z">До розкладу занять студентів</a> <a class="btn btn-primary display-4" href="page19.html#table1-27">До розкладу занять викладачів</a> <a class="btn btn-primary display-4" href="https://mobirise.co">До сортування за послідовністю занять</a></div>
             </div>
         </div>
     </div>
