--- a/student.html
+++ b/student.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-q">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-q">
 
     
 
